Created mongooose schema and server serving public folder

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>remind-me</title>
 </head>
 <body>
-  
+  <script src ="/bundle.js"></script>
+  <div id="remind-me"></div>
 </body>
 </html>
