Decided to only allow for reminders with the next hour

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+  <link rel="stylesheet" href="/style.css" type="text/html">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>remind-me</title>
 </head>
 <body>
-  <div id="remind-me"></div>
+  <div id="remind-me" margin-left="auto" margin-right="auto"></div>
   <script src ="/bundle.js"></script>
 </body>
 </html>
